--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "pg": "^8.17.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.10",
     "@types/pg": "^8.16.0",
     "nodemon": "^3.1.11",
-    "prisma": "^7.3.0"
+    "prisma": "^7.3.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
