--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.3",
-    "pg": "^8.17.2"
+    "pg": "^8.17.2",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
