--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.17.2",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "swagger-ui-express": "^5.0.1",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -32,6 +34,8 @@
     "@types/node": "^25.0.10",
     "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.3",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/yamljs": "^0.2.34",
     "jest": "^30.2.0",
     "nodemon": "^3.1.11",
     "prisma": "^7.3.0",
